--- a/gb/21/10/17/n13310918.md
+++ b/gb/21/10/17/n13310918.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fhwnic3872/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fhwnic3872/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fhwnic3872/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fhwnic3872/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fhwnic3872/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>NBA：库里冲击三分王 詹姆斯得分历史第二</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311136-GettyImages-1297137427-600x400.jpg" />
 <h6>库里（左）在比赛中防守詹姆斯。(Harry How/Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2021年10月18日讯】（大纪元记者唐逸仁综合报导）NBA2021/2022赛季将在19日拉开帷幕，随着赛季的进行，有很多统计数据和数字值得了解和跟踪，以下是本赛季篮球迷应该记住的10个NBA数据里程碑。</p>
-<h2>勒布朗·<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E8%A9%B9%E5%A7%86%E6%96%AF.md#1">詹姆斯</a>(LeBron James)</h2>
-<p>勒布朗·<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E8%A9%B9%E5%A7%86%E6%96%AF.md#1">詹姆斯</a>（Lebron James）是四次MVP和17次入选NBA最佳球员，新赛季将是他的第19个赛季打球，他在2020-21赛季刚加入这家得分35,000分的俱乐部。他连续18个赛季平均每场至少25分，并且本赛季在几个不同的统计类别中有望取得进步。</p>
+<h2>勒布朗·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A9%B9%E5%A7%86%E6%96%AF.md#1">詹姆斯</a>(LeBron James)</h2>
+<p>勒布朗·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A9%B9%E5%A7%86%E6%96%AF.md#1">詹姆斯</a>（Lebron James）是四次MVP和17次入选NBA最佳球员，新赛季将是他的第19个赛季打球，他在2020-21赛季刚加入这家得分35,000分的俱乐部。他连续18个赛季平均每场至少25分，并且本赛季在几个不同的统计类别中有望取得进步。</p>
 <p><strong>总得分和投篮命中数</strong></p>
 <p>目前历史得分榜：1.贾巴尔(Kareem Abdul-Jabbar)38,387分；2.卡尔·马龙(Karl Malone)36,928分；3.詹姆斯35,367分。</p>
 <p>詹姆斯距离马龙还有1,561分。在过去四个赛季，詹姆斯平均每个赛季得到1,645分。若本赛季保持这个得分，他将超越马龙升到历史排行榜的第二位。</p>
@@ -21,14 +21,14 @@
 <p>目前历史罚球命中榜：1.卡尔·马龙9,787；2.摩西·马龙(Moses Eugene Malone)9,018；3.科比·布莱恩特(Kobe Bryant)8,378；4.奥斯卡·罗伯特森(Oscar Robertson)7,694；5.詹姆斯7,582。</p>
 <p>詹姆斯以112次罚球落后罗伯逊。在过去的四个赛季里，他场均罚球277次，如不出意外，本赛季他无疑会超越罗伯特森更上一层楼。</p>
 <p><strong>总助攻</strong></p>
-<p>目前历史助攻榜：5.<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E4%BF%9D%E7%BD%97.md#1">保罗</a>(Chris Paul)10,275；6.“魔术师”约翰逊(Earvin Johnson Jr.)10,141；7.奥斯卡·罗伯特森9,887；8.詹姆斯9,696.</p>
-<p>詹姆斯涯助攻9,696次，与罗伯逊（9,887次）相差191次。在过去的四个赛季中场均助攻数为558次，如果他在2021-22赛季得到550次左右的助攻，他也将可能超越湖人传奇魔术师约翰逊（10141次），成为历史第六。总的来说，詹姆斯很有可能，在约翰逊、克里斯·<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E4%BF%9D%E7%BD%97.md#1">保罗</a>、马克·杰克逊(Mark Jackson)、史蒂夫·纳什(Steve Nash)、贾森·基德和约翰·斯托克顿(John Stockton)之后，成为进入10,000次职业生涯助攻俱乐部的第七位球员。</p>
-<h2>斯蒂芬·<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E5%BA%93%E9%87%8C.md#1">库里</a>(Stephen Curry)</h2>
+<p>目前历史助攻榜：5.<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%9D%E7%BD%97.md#1">保罗</a>(Chris Paul)10,275；6.“魔术师”约翰逊(Earvin Johnson Jr.)10,141；7.奥斯卡·罗伯特森9,887；8.詹姆斯9,696.</p>
+<p>詹姆斯涯助攻9,696次，与罗伯逊（9,887次）相差191次。在过去的四个赛季中场均助攻数为558次，如果他在2021-22赛季得到550次左右的助攻，他也将可能超越湖人传奇魔术师约翰逊（10141次），成为历史第六。总的来说，詹姆斯很有可能，在约翰逊、克里斯·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%9D%E7%BD%97.md#1">保罗</a>、马克·杰克逊(Mark Jackson)、史蒂夫·纳什(Steve Nash)、贾森·基德和约翰·斯托克顿(John Stockton)之后，成为进入10,000次职业生涯助攻俱乐部的第七位球员。</p>
+<h2>斯蒂芬·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BA%93%E9%87%8C.md#1">库里</a>(Stephen Curry)</h2>
 <p><strong>三分命中数</strong></p>
-<p>历史上的三分球命中数，雷·阿伦(Ray Allen)2,973；斯蒂芬·<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E5%BA%93%E9%87%8C.md#1">库里</a>2,832；雷吉·米勒(Reggie Miller)2,560；凯尔·科沃尔(Kyle Korver)2,450；詹姆斯·哈登(James Harden)2,445。</p>
-<figure id="attachment_13311139" aria-describedby="caption-attachment-13311139" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13311139-GettyImages-1345604442.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13311139" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311139-GettyImages-1345604442.jpg" alt="" width="600" b="486" /></a><figcaption id="caption-attachment-13311139" class="wp-caption-text">库里在詹姆斯和努恩的防守下，投中一个三分球。他在新赛季中有望摘下NBA<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E4%B8%89%E5%88%86%E7%8E%8B.md#1">三分王</a>桂冠。(Thearon W. Henderson/Getty Images)</figcaption></figure>
+<p>历史上的三分球命中数，雷·阿伦(Ray Allen)2,973；斯蒂芬·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BA%93%E9%87%8C.md#1">库里</a>2,832；雷吉·米勒(Reggie Miller)2,560；凯尔·科沃尔(Kyle Korver)2,450；詹姆斯·哈登(James Harden)2,445。</p>
+<figure id="attachment_13311139" aria-describedby="caption-attachment-13311139" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13311139-GettyImages-1345604442.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13311139" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311139-GettyImages-1345604442.jpg" alt="" width="600" b="486" /></a><figcaption id="caption-attachment-13311139" class="wp-caption-text">库里在詹姆斯和努恩的防守下，投中一个三分球。他在新赛季中有望摘下NBA<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%89%E5%88%86%E7%8E%8B.md#1">三分王</a>桂冠。(Thearon W. Henderson/Getty Images)</figcaption></figure>
 <p>上个赛季，斯蒂芬·库里打了63场比赛，在得分（场均32.0分，职业生涯新高）、三分球命中数（337）和出手次数（801）都领先联盟。自从2012-13赛季，库里和金州勇士队开始在西部的崛起，这位明星后卫在这九个赛季中有八个赛季投进了212个或更多的三分球。此外，库里在其中三个赛季中投中了320个或更多的三分球（2015-16赛季402个三分球；2016-17赛季324个；2020-21赛季337个）。</p>
-<p>由此可见，库里很可能2021-22赛季成为NBA历史的<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E4%B8%89%E5%88%86%E7%8E%8B.md#1">三分王</a>。他距离超过雷·阿伦三分球命中率的历史纪录仅差141次，对库里来说，新赛季很容易超越雷·阿伦的纪录。</p>
+<p>由此可见，库里很可能2021-22赛季成为NBA历史的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%89%E5%88%86%E7%8E%8B.md#1">三分王</a>。他距离超过雷·阿伦三分球命中率的历史纪录仅差141次，对库里来说，新赛季很容易超越雷·阿伦的纪录。</p>
 <h2>克里斯·保罗(Chris Paul)</h2>
 <p><strong>总助攻数</strong></p>
 <p>NBA历史的助攻数排名：约翰·斯托克顿15,806，杰森·基德12,091，史蒂夫·纳什10,335，马克·杰克逊10,334，克里斯·保罗10,275。</p>
@@ -38,9 +38,9 @@
 <p><strong>抢断数</strong></p>
 <p>NBA历史球员抢断数排行榜：约翰·斯托克顿3,265；杰森·基德2,684；迈克尔·乔丹2,514；加里·佩顿2,445；克里斯·保罗2,332。</p>
 <p>保罗也可以在2021-22赛季登上历史抢断排行榜。他目前的抢断次数排名历史第五，仅落后于该类别第4位的加里·佩顿113次。在过去的四个赛季中，保罗场均抢断总数为105次，但在上赛季的70场比赛中抢断99次之后，他有机会在新赛季超越佩顿。</p>
-<h2>德怀特·<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E9%9C%8D%E5%8D%8E%E5%BE%B7.md#1">霍华德</a>（Dwight Howard）</h2>
+<h2>德怀特·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9C%8D%E5%8D%8E%E5%BE%B7.md#1">霍华德</a>（Dwight Howard）</h2>
 <p><strong>总篮板数</strong></p>
-<p>德怀特·<ahref="https://github.com/fhwnic3872/djy/blob/master/gb/tag/%E9%9C%8D%E5%8D%8E%E5%BE%B7.md#1">霍华德</a>有机会在2021-22赛季上升到历史篮板榜第10位，目前他以14,271总篮板数排在第十一位。在他前面有威尔特·张伯伦(Wilt Chamberlain)23,924，比尔·拉塞尔(Bill Russell)21,620，贾巴尔17,440，埃尔文海耶斯(Elvin Hayes)16,279，摩西马龙16,212，蒂姆·邓肯(Tim Duncan)15,091，卡尔·马龙14,968，罗伯特·帕利什（Robert Parish）14,715，凯文·加内特14,662，内特瑟·蒙德(Nate Thurmond)14,464。</p>
+<p>德怀特·<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%9C%8D%E5%8D%8E%E5%BE%B7.md#1">霍华德</a>有机会在2021-22赛季上升到历史篮板榜第10位，目前他以14,271总篮板数排在第十一位。在他前面有威尔特·张伯伦(Wilt Chamberlain)23,924，比尔·拉塞尔(Bill Russell)21,620，贾巴尔17,440，埃尔文海耶斯(Elvin Hayes)16,279，摩西马龙16,212，蒂姆·邓肯(Tim Duncan)15,091，卡尔·马龙14,968，罗伯特·帕利什（Robert Parish）14,715，凯文·加内特14,662，内特瑟·蒙德(Nate Thurmond)14,464。</p>
 <p>在2021-22赛季进入他职业生涯的第18个赛季，霍华德可以在本赛季与詹姆斯一起享受一些里程碑式的乐趣。在过去的三个赛季——他成为替补中锋的期间——霍华德平均每个赛季总篮板数为390个。这足以让他超越内特瑟·蒙德，在历史总篮板榜上排名第10。如果他稍微提高他的篮板产量，他将有一个很好的机会超越凯文加内特获得第9位，因为他在霍华德身上有392个篮板的优势。</p>
 <figure id="attachment_13311135" aria-describedby="caption-attachment-13311135" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13311135-GettyImages-1278505829.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-13311135" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311135-GettyImages-1278505829.jpg" alt="" width="600" b="417" /></a><figcaption id="caption-attachment-13311135" class="wp-caption-text">霍华德又抢下一个篮板球。他很可能在新赛季中进入历史总篮板榜上排名第10。(Kevin C. Cox/Getty Images)</figcaption></figure>
 <p><strong>进攻篮板数</strong></p>
@@ -51,35 +51,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/21/7/21/n13103557.md#1">雄鹿4:2击败太阳 时隔50年再夺NBA总冠军</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/21/9/7/n13215730.md#1">NBA球星到篮网和湖人“抱团”冲击总冠军</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/21/9/17/n13241657.md#1">组图：体育网ESPN公布NBA史上最强5球星</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/21/9/30/n13270669.md#1">NBA球星欧文拒绝回应是否打疫苗 白思豪苦劝 克鲁兹力挺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/21/n13103557.md#1">雄鹿4:2击败太阳 时隔50年再夺NBA总冠军</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/7/n13215730.md#1">NBA球星到篮网和湖人“抱团”冲击总冠军</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/17/n13241657.md#1">组图：体育网ESPN公布NBA史上最强5球星</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/30/n13270669.md#1">NBA球星欧文拒绝回应是否打疫苗 白思豪苦劝 克鲁兹力挺</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11009341.md#1" target="_blank">阎长贵：陶铸是被谁打倒的？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/28/n9085516.md#1" target="_blank">一位英国亚裔女士的生命礼物</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196766.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(2)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/9/n12316879.md#1">廖远：中南海内斗你死我活 李克强处境微妙</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/9/n12318283.md#1">与李小龙交手谁会赢 成龙的回答令人不齿</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/7/n12312698.md#1">为何说现在买新iPhone时机最不巧</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/10/n12318484.md#1">【更新】周庭被捕 黎智英之后第十人</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/9/n12318126.md#1">【薇羽看世间】背叛孙中山 宋庆龄的悲剧人生</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/9/n12317932.md#1">用筷子扒拉菜被批素质低 赵丽颖获嘉宾帮澄清</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/10/n12318600.md#1">TWICE线上开唱126国粉丝参与 子瑜新造型亮相</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/9/n12318111.md#1">胡歌主演新剧 被王家卫要求减重8至10公斤</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/7/n12314970.md#1">为了身体健康？男星张嘉译改名张嘉益登热搜</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/9/n12316868.md#1">寇世勋再演贾静雯柯佳嬿老爸  进剧组暖过88节</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/2/14/n11869302.md#1">【命理】那些为皇帝看相算命的人</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/6/1/n12153439.md#1">违背原著的查抄荣国府</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/9/n12317099.md#1">疫情下意大利圣母雕像流血泪 引民众围观</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/7/n12313595.md#1">“女子无才便是德”究竟是什么意思</a></li>
-<li><a href="https://github.com/fhwnic3872/djy/blob/master/gb/20/8/4/n12306901.md#1">【佳人传】明清贤媛之冠——商景兰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fhwnic3872/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fhwnic3872/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/17/n13310918.htm">NBA：库里冲击三分王 詹姆斯得分历史第二</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/17/n13310918.htm">NBA：库里冲击三分王 詹姆斯得分历史第二</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fhwnic3872/djy/blob/master/gb/21/10/17/n13310918.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fhwnic3872/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fhwnic3872/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fhwnic3872/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fhwnic3872/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/17/n13310918.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
